Sync agent debug6